<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    app:layout_insetEdge="bottom"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:background="@color/black">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/conteudo_tela"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

<!--      <Toolbar-->
<!--          android:id="@+id/toolbar_details"-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="wrap_content"-->
<!--          android:background="@drawable/gradient_background"-->
<!--          app:layout_constraintEnd_toEndOf="parent"-->
<!--          app:layout_constraintStart_toStartOf="parent"-->
<!--          app:layout_constraintTop_toTopOf="parent">-->
<!--          <include layout="@layout/custom_toolbar_movie_details"/>-->
<!--      </Toolbar>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="190dp"
        android:backgroundTint="@color/skuirrel_light_green"
        android:background="@color/skuirrel_light_green"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="6dp" />


      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conteudo_tela_detalhes"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/missing_cover" />

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_poster_card"
            android:layout_width="132dp"
            android:layout_height="200dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="5dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_backdrop">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="132dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/movie_backdrop"
                tools:src="@drawable/missing_cover" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_card"
            app:layout_constraintTop_toBottomOf="@+id/movie_backdrop"
            tools:text="Movie Title aka. here goes the title" />

        <TextView
            android:id="@+id/rating_title"
            android:layout_width="57dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/rating_title"
            app:layout_constraintTop_toBottomOf="@+id/rating_title"
            tools:text="8.5/10" />

        <TextView
            android:id="@+id/release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/year"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@+id/rating_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/release_date_title"
            app:layout_constraintTop_toBottomOf="@+id/release_date_title"
            tools:text="2021" />

        <TextView
            android:id="@+id/synopsis_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/sinopsis"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_card" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_title"
            tools:text="Pensando mais a longo prazo, o fenômeno da Internet estimula a padronização das diretrizes de desenvolvimento para o futuro." />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis" />

        <TextView
            android:id="@+id/videos_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/videos"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/video_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videos_title"
            tools:itemCount="15"
            tools:listitem="@layout/videos_grid_view_item" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_recycler_view" />

        <include
            android:id="@+id/latest_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/content_list_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

      <ProgressBar
          android:id="@+id/movie_list_progress"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:indeterminateTint="@color/white"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageView
          android:id="@+id/status_image"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>